@@ -16,7 +16,7 @@ LIB_DIR=$OW_HOME/lib
 TARGET_DIR=$OW_HOME/target
 BUILD_DIR=$OW_HOME/build
 
-CLASSPATH=$BUILD_DIR:$TARGET_DIR/overlayweaver.jar:$LIB_DIR/je-6.3.8.jar:$LIB_DIR/commons-cli-1.3.jar:$LIB_DIR/clink200.jar
+CLASSPATH=$BUILD_DIR:$TARGET_DIR/overlayweaver.jar:$LIB_DIR/je-6.3.8.jar:$LIB_DIR/commons-cli-1.3.1.jar:$LIB_DIR/clink200.jar
 LOGGING_CONFIG=$BIN_DIR/logging.properties
 if $cygwin; then
   CLASSPATH=`cygpath --path --windows "$CLASSPATH"`
