@@ -1,3 +1,8 @@
+2015-11-25  Kazuyuki Shudo  <shudo@computer.org>
+
+	* lib/commons-cli-*.jar
+	Apache Commons CLI was updated from 1.3 to 1.3.1.
+
 2015-06-15  Kazuyuki Shudo  <shudo@computer.org>
 
 	* src/ow/tool/dhtshell/XMLRPCServer.java
